Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Chủ chung cư mini cháy làm 56 người chết bị đề nghị 11-12 năm tù",
+    "content": "Chủ chung cư mini Nghiêm Quang Minh, bị cáo trong vụ cháy làm 56 người chết, đã bị Viện kiểm sát đề nghị mức án từ 11-12 năm tù vì vi phạm quy định về phòng cháy chữa cháy. Ngoài Minh, còn có 7 cựu cán bộ bị truy tố do thiếu trách nhiệm trong việc quản lý và xử lý các sai phạm xây dựng, dẫn đến hậu quả nghiêm trọng. Vụ cháy đã cướp đi sinh mạng của nhiều người và để lại nỗi đau cho nhiều gia đình.",
+    "link": "https://tuoitre.vn/chu-chung-cu-mini-chay-lam-56-nguoi-chet-bi-de-nghi-11-12-nam-tu-20250311104459336.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 10,
+    "question": "Chủ chung cư mini trong vụ cháy làm 56 người chết bị đề nghị mức án bao nhiêu năm tù?",
+    "answers": [
+      {
+        "text": "11-12 năm tù",
+        "correct": true
+      },
+      {
+        "text": "6-7 năm tù",
+        "correct": false
+      },
+      {
+        "text": "4-5 năm tù",
+        "correct": false
+      },
+      {
+        "text": "30-36 tháng tù",
+        "correct": false
+      },
+      {
+        "text": "Không bị phạt",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "CEO Trung Quốc bị chỉ trích vì nói 'nghèo đừng ăn lẩu'",
     "content": "CEO Du Zhongbong của chuỗi lẩu Banu Maodu đã gây ra tranh cãi khi tuyên bố rằng những người có thu nhập 5.000 nhân dân tệ mỗi tháng không nên ăn lẩu, cho rằng món ăn này không dành cho tầng lớp thấp. Phát ngôn này xuất phát từ một hội thảo về ngành lẩu và đã khiến nhiều người phản đối do thiếu tinh tế và mang tính phân cấp xã hội. Sau làn sóng chỉ trích, ông đã xin lỗi và cam kết sẽ điều chỉnh cách giao tiếp của mình.",
     "link": "https://vnexpress.net/ceo-trung-quoc-bi-chi-trich-vi-noi-ngheo-dung-an-lau-4859611.html",
@@ -502,33 +533,6 @@
     ]
   },
   {
-    "title": "Vì sao viêm amidan dễ tái phát khi thời tiết thay đổi?",
-    "content": "Viêm amidan thường tái phát khi thời tiết thay đổi do hệ miễn dịch suy giảm và môi trường thuận lợi cho vi khuẩn phát triển. Amidan là tổ chức bạch huyết quan trọng giúp bảo vệ cơ thể, nhưng khi bị viêm, nó có thể tạo ra triệu chứng đau họng, sốt và khó nuốt. Để phòng ngừa tái phát, người bệnh nên súc họng bằng nước muối, đeo khẩu trang và duy trì lối sống lành mạnh.",
-    "link": "https://vnexpress.net/vi-sao-viem-amidan-de-tai-phat-khi-thoi-tiet-thay-doi-4859702.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao viêm amidan lại dễ tái phát khi thời tiết thay đổi?",
-    "answers": [
-      {
-        "text": "Do môi trường thuận lợi cho vi khuẩn phát triển và hệ miễn dịch suy giảm.",
-        "correct": true
-      },
-      {
-        "text": "Vì amidan không có chức năng miễn dịch.",
-        "correct": false
-      },
-      {
-        "text": "Do thời tiết lạnh làm amidan viêm.",
-        "correct": false
-      },
-      {
-        "text": "Vì viêm amidan chỉ xảy ra trong mùa hè.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lịch thi học kì 2 của học sinh phổ thông trên cả nước như thế nào?",
     "content": "Lịch thi học kỳ 2 năm học 2024-2025 cho học sinh phổ thông trên cả nước sẽ do Chủ tịch UBND tỉnh, thành phố quyết định, phù hợp với tình hình địa phương. Theo quy định của Bộ GD&ĐT, học kỳ 2 sẽ bắt đầu sau ngày 17/1/2025 và kết thúc trước 31/5/2025, với 17 tuần học. Các kỳ thi tốt nghiệp trung học phổ thông dự kiến diễn ra vào 26 và 27/6/2025, và lịch thi cụ thể sẽ được điều chỉnh theo từng địa phương để đảm bảo thực hiện đầy đủ chương trình giáo dục.",
     "link": "https://dantri.com.vn/giao-duc/lich-thi-hoc-ki-2-cua-hoc-sinh-pho-thong-tren-ca-nuoc-nhu-the-nao-20250311115603384.htm",
@@ -551,6 +555,33 @@
       },
       {
         "text": "Học sinh không phải thi nếu không muốn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao viêm amidan dễ tái phát khi thời tiết thay đổi?",
+    "content": "Viêm amidan thường tái phát khi thời tiết thay đổi do hệ miễn dịch suy giảm và môi trường thuận lợi cho vi khuẩn phát triển. Amidan là tổ chức bạch huyết quan trọng giúp bảo vệ cơ thể, nhưng khi bị viêm, nó có thể tạo ra triệu chứng đau họng, sốt và khó nuốt. Để phòng ngừa tái phát, người bệnh nên súc họng bằng nước muối, đeo khẩu trang và duy trì lối sống lành mạnh.",
+    "link": "https://vnexpress.net/vi-sao-viem-amidan-de-tai-phat-khi-thoi-tiet-thay-doi-4859702.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao viêm amidan lại dễ tái phát khi thời tiết thay đổi?",
+    "answers": [
+      {
+        "text": "Do môi trường thuận lợi cho vi khuẩn phát triển và hệ miễn dịch suy giảm.",
+        "correct": true
+      },
+      {
+        "text": "Vì amidan không có chức năng miễn dịch.",
+        "correct": false
+      },
+      {
+        "text": "Do thời tiết lạnh làm amidan viêm.",
+        "correct": false
+      },
+      {
+        "text": "Vì viêm amidan chỉ xảy ra trong mùa hè.",
         "correct": false
       }
     ]
@@ -2713,37 +2744,6 @@
     ]
   },
   {
-    "title": "Người trẻ chọn sếp",
-    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
-    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
-    "answers": [
-      {
-        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
-        "correct": true
-      },
-      {
-        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
-        "correct": false
-      },
-      {
-        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hà Nội cho phép nâng chiều cao khu tập thể Thành Công lên 40 tầng",
     "content": "Hà Nội đã cho phép quận Ba Đình nghiên cứu phương án nâng chiều cao tối đa lên 40 tầng cho khu chung cư cũ Thành Công trong quá trình cải tạo, tái thiết. Quyết định này nhằm kết nối không gian hồ Thành Công với các khu vực xanh và mở rộng trục đường nội khu. Thành phố yêu cầu quận phải hoàn thiện phương án trình Sở Quy hoạch Kiến trúc trước ngày 25/3, trong khi cũng đề xuất nâng cao tầng cho các khu chung cư khác trên địa bàn.",
     "link": "https://vnexpress.net/ha-noi-cho-phep-nang-chieu-cao-khu-tap-the-thanh-cong-len-40-tang-4859359.html",
@@ -2775,28 +2775,32 @@
     ]
   },
   {
-    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
-    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
-    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
-    "cat": "oto-xe-may",
-    "positivity": 5,
+    "title": "Người trẻ chọn sếp",
+    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
+    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
     "importance": 7,
-    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
+    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
     "answers": [
       {
-        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
+        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
         "correct": true
       },
       {
-        "text": "Để tiết kiệm nhiên liệu.",
+        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
         "correct": false
       },
       {
-        "text": "Để tăng tốc độ di chuyển.",
+        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
         "correct": false
       },
       {
-        "text": "Để giảm tiếng ồn khi lái xe.",
+        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
         "correct": false
       }
     ]
@@ -2828,6 +2832,33 @@
       },
       {
         "text": "Không cần lo lắng về sự phát triển của AI",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
+    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
+    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
+    "cat": "oto-xe-may",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
+    "answers": [
+      {
+        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
+        "correct": true
+      },
+      {
+        "text": "Để tiết kiệm nhiên liệu.",
+        "correct": false
+      },
+      {
+        "text": "Để tăng tốc độ di chuyển.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm tiếng ồn khi lái xe.",
         "correct": false
       }
     ]
