Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Ủy ban Chứng khoán 'chốt' lộ trình vận hành hệ thống KRX",
+    "content": "Ủy ban Chứng khoán vừa công bố lộ trình vận hành hệ thống KRX, dự kiến sẽ chính thức hoạt động vào tháng 5 hoặc tháng 6 năm 2025. Trước đó, HoSE đã thông báo cho các công ty chứng khoán về việc chuẩn bị dữ liệu để kiểm thử hệ thống. Đáng chú ý, năm nay, quyết tâm của cơ quan quản lý thị trường chứng khoán rõ ràng hơn so với năm ngoái, khi hệ thống KRX đã nhiều lần bị trì hoãn.",
+    "link": "https://tuoitre.vn/uy-ban-chung-khoan-chot-lo-trinh-van-hanh-he-thong-krx-20250311125209169.htm",
+    "cat": "kinh-doanh",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Lộ trình vận hành hệ thống KRX của Ủy ban Chứng khoán sẽ bắt đầu vào khi nào?",
+    "answers": [
+      {
+        "text": "Tháng 5 hoặc tháng 6 năm 2025",
+        "correct": true
+      },
+      {
+        "text": "Tháng 12 năm 2023",
+        "correct": false
+      },
+      {
+        "text": "Tháng 4 năm 2025",
+        "correct": false
+      },
+      {
+        "text": "Tháng 1 năm 2026",
+        "correct": false
+      },
+      {
+        "text": "Tháng 2 năm 2024",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chùa hang không sư ở Lý Sơn: Di sản giữa lòng hang núi lửa",
     "content": "Chùa Hang không sư ở Lý Sơn là một điểm đến độc đáo nằm hoàn toàn trong hang núi lửa, có lịch sử hơn 400 năm. Nơi đây từng là nơi thờ tự của người Chăm và hiện nay là một ngôi chùa Phật giáo nổi tiếng. Chùa Hang thu hút đông đảo du khách đến tham quan và hành lễ, đặc biệt trong các dịp lễ lớn như Tết Nguyên Đán và Vu Lan. Với diện tích lớn và cảnh quan tuyệt đẹp, chùa đã được công nhận là thắng cảnh cấp quốc gia vào năm 1994.",
     "link": "https://tuoitre.vn/chua-hang-khong-su-o-ly-son-di-san-giua-long-hang-nui-lua-20250311115337587.htm",
@@ -2595,6 +2626,37 @@
     ]
   },
   {
+    "title": "Người trẻ chọn sếp",
+    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
+    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
+    "answers": [
+      {
+        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
+        "correct": true
+      },
+      {
+        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
+        "correct": false
+      },
+      {
+        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
     "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
     "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
@@ -2648,37 +2710,6 @@
       },
       {
         "text": "Không cần lo lắng về sự phát triển của AI",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Người trẻ chọn sếp",
-    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
-    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
-    "answers": [
-      {
-        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
-        "correct": true
-      },
-      {
-        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
-        "correct": false
-      },
-      {
-        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
         "correct": false
       }
     ]
@@ -4403,33 +4434,6 @@
       },
       {
         "text": "Có, ở Australia",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hoa hậu Thùy Tiên lộ rõ mệt mỏi khi dự sự kiện giữa lùm xùm kẹo rau củ",
-    "content": "Hoa hậu Thùy Tiên đã tham dự Tuần lễ thời trang Paris mặc dù đang phải đối mặt với áp lực từ dư luận liên quan đến việc quảng cáo cho sản phẩm kẹo rau củ kém chất lượng. Trong sự kiện, cô lộ rõ vẻ mệt mỏi và kém sắc, với quầng mắt trũng sâu và làn da không còn căng bóng. Dù đã nỗ lực thể hiện hình ảnh tích cực, áp lực từ những lùm xùm đã ảnh hưởng đến thần thái của cô tại các buổi trình diễn thời trang.",
-    "link": "https://dantri.com.vn/giai-tri/hoa-hau-thuy-tien-lo-ro-met-moi-khi-du-su-kien-giua-lum-xum-keo-rau-cu-20250310150324904.htm",
-    "cat": "giai-tri",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Thùy Tiên đã gặp phải vấn đề gì khi tham dự Tuần lễ thời trang Paris?",
-    "answers": [
-      {
-        "text": "Cô bị áp lực dư luận vì quảng cáo kẹo rau củ kém chất lượng.",
-        "correct": true
-      },
-      {
-        "text": "Cô không biết cách phối đồ.",
-        "correct": false
-      },
-      {
-        "text": "Cô không được mời tham dự sự kiện.",
-        "correct": false
-      },
-      {
-        "text": "Cô gặp vấn đề về sức khỏe.",
         "correct": false
       }
     ]
