Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -560,6 +560,33 @@
     ]
   },
   {
+    "title": "Xe máy từ từ sang đường bị ôtô đâm ngã",
+    "content": "Vào ngày 9/3 tại quốc lộ 37b, Thái Bình, một người đàn ông điều khiển xe máy đã từ từ sang đường mà không có tín hiệu xin đường. Khi xe ôtô đi tới, người này bất ngờ chuyển hướng rẽ trái và bị ôtô đâm ngã. May mắn là không có thương vong xảy ra, nhưng tình huống này nhấn mạnh tầm quan trọng của việc sử dụng tín hiệu và quan sát kỹ lưỡng khi tham gia giao thông.",
+    "link": "https://vnexpress.net/xe-may-tu-tu-sang-duong-bi-oto-dam-nga-4859533.html",
+    "cat": "oto-xe-may",
+    "positivity": 4,
+    "importance": 6,
+    "question": "Tại sao người đàn ông đi xe máy lại bị ôtô đâm ngã?",
+    "answers": [
+      {
+        "text": "Vì không có tín hiệu xin đường khi chuyển hướng.",
+        "correct": true
+      },
+      {
+        "text": "Vì lái xe ôtô chạy quá nhanh.",
+        "correct": false
+      },
+      {
+        "text": "Vì người điều khiển xe máy không đội mũ bảo hiểm.",
+        "correct": false
+      },
+      {
+        "text": "Vì thời tiết xấu nên tầm nhìn kém.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vì sao người IQ cao hay đau khổ?",
     "content": "Những người có chỉ số IQ cao thường phải đối mặt với nhiều khó khăn trong cuộc sống, bao gồm việc đặt ra kỳ vọng quá cao cho bản thân, dễ lo lắng và cảm thấy cô lập xã hội. Nghiên cứu cho thấy rằng sự thông minh không đồng nghĩa với hạnh phúc, và những người này có thể gặp khó khăn trong việc tìm kiếm kết nối xã hội. Để có hạnh phúc, việc theo đuổi sở thích và đam mê có thể mang lại lợi ích lớn hơn so với thành tích hay IQ.",
     "link": "https://vnexpress.net/vi-sao-nguoi-iq-cao-hay-dau-kho-4859280.html",
@@ -2918,37 +2945,6 @@
     ]
   },
   {
-    "title": "Hà Nội cho phép nâng chiều cao khu tập thể Thành Công lên 40 tầng",
-    "content": "Hà Nội đã cho phép quận Ba Đình nghiên cứu phương án nâng chiều cao tối đa lên 40 tầng cho khu chung cư cũ Thành Công trong quá trình cải tạo, tái thiết. Quyết định này nhằm kết nối không gian hồ Thành Công với các khu vực xanh và mở rộng trục đường nội khu. Thành phố yêu cầu quận phải hoàn thiện phương án trình Sở Quy hoạch Kiến trúc trước ngày 25/3, trong khi cũng đề xuất nâng cao tầng cho các khu chung cư khác trên địa bàn.",
-    "link": "https://vnexpress.net/ha-noi-cho-phep-nang-chieu-cao-khu-tap-the-thanh-cong-len-40-tang-4859359.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Hà Nội đã cho phép nâng chiều cao khu tập thể Thành Công lên bao nhiêu tầng?",
-    "answers": [
-      {
-        "text": "40 tầng",
-        "correct": true
-      },
-      {
-        "text": "30 tầng",
-        "correct": false
-      },
-      {
-        "text": "24 tầng",
-        "correct": false
-      },
-      {
-        "text": "20 tầng",
-        "correct": false
-      },
-      {
-        "text": "50 tầng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Người trẻ chọn sếp",
     "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
     "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
@@ -2975,6 +2971,37 @@
       },
       {
         "text": "Vì họ muốn có thời gian làm việc thoải mái.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hà Nội cho phép nâng chiều cao khu tập thể Thành Công lên 40 tầng",
+    "content": "Hà Nội đã cho phép quận Ba Đình nghiên cứu phương án nâng chiều cao tối đa lên 40 tầng cho khu chung cư cũ Thành Công trong quá trình cải tạo, tái thiết. Quyết định này nhằm kết nối không gian hồ Thành Công với các khu vực xanh và mở rộng trục đường nội khu. Thành phố yêu cầu quận phải hoàn thiện phương án trình Sở Quy hoạch Kiến trúc trước ngày 25/3, trong khi cũng đề xuất nâng cao tầng cho các khu chung cư khác trên địa bàn.",
+    "link": "https://vnexpress.net/ha-noi-cho-phep-nang-chieu-cao-khu-tap-the-thanh-cong-len-40-tang-4859359.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Hà Nội đã cho phép nâng chiều cao khu tập thể Thành Công lên bao nhiêu tầng?",
+    "answers": [
+      {
+        "text": "40 tầng",
+        "correct": true
+      },
+      {
+        "text": "30 tầng",
+        "correct": false
+      },
+      {
+        "text": "24 tầng",
+        "correct": false
+      },
+      {
+        "text": "20 tầng",
+        "correct": false
+      },
+      {
+        "text": "50 tầng",
         "correct": false
       }
     ]
@@ -4695,68 +4722,6 @@
       },
       {
         "text": "Vì Trung Quốc tăng cường nhập khẩu từ các nước khác.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Lady Gaga sẽ biểu diễn độc quyền tại Singapore, cú kích cầu mới cho đảo quốc sư tử?",
-    "content": "Lady Gaga sẽ tổ chức bốn đêm diễn độc quyền tại Singapore vào tháng 5, đánh dấu điểm dừng chân duy nhất của cô ở Đông Nam Á. Sự kiện này dự kiến sẽ thu hút hàng trăm người hâm mộ từ các quốc gia lân cận và kích cầu du lịch cũng như kinh tế của Singapore. Vé sẽ được mở bán vào ngày 18-3, và có các gói vé kết hợp với khách sạn cũng như nhiều hoạt động tham quan khác cho du khách.",
-    "link": "https://tuoitre.vn/lady-gaga-se-bieu-dien-doc-quyen-tai-singapore-cu-kich-cau-moi-cho-dao-quoc-su-tu-20250310145926128.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Lady Gaga sẽ biểu diễn ở đâu vào tháng 5?",
-    "answers": [
-      {
-        "text": "Singapore",
-        "correct": true
-      },
-      {
-        "text": "Việt Nam",
-        "correct": false
-      },
-      {
-        "text": "Thái Lan",
-        "correct": false
-      },
-      {
-        "text": "Malaysia",
-        "correct": false
-      },
-      {
-        "text": "Indonesia",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tesla bị nghi gian lận để lấy tiền hỗ trợ mua xe điện",
-    "content": "Tesla đang bị điều tra vì nghi ngờ gian lận để nhận tiền hỗ trợ mua xe điện tại Canada. Một đại lý của Tesla đã nộp hơn 4.000 đơn yêu cầu hoàn tiền chỉ trong một tuần, điều này khiến nhiều người hoài nghi về tính khả thi của con số này. Chương trình khuyến khích xe điện của Canada dự kiến kết thúc vào tháng 3, nhưng có thông tin cho rằng một số đại lý không nhận được hoàn tiền cho các xe đã giao.",
-    "link": "https://vnexpress.net/tesla-bi-nghi-gian-lan-de-lay-tien-ho-tro-mua-xe-dien-4859080.html",
-    "cat": "kinh-doanh",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tesla có bị nghi ngờ gian lận để lấy tiền hỗ trợ mua xe điện ở đâu không?",
-    "answers": [
-      {
-        "text": "Có, ở Canada",
-        "correct": true
-      },
-      {
-        "text": "Có, ở Mỹ",
-        "correct": false
-      },
-      {
-        "text": "Có, ở Anh",
-        "correct": false
-      },
-      {
-        "text": "Không, không có nghi ngờ nào",
-        "correct": false
-      },
-      {
-        "text": "Có, ở Australia",
         "correct": false
       }
     ]
